fixing hamburger icon on mobile

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -25,6 +25,10 @@ ul {
 		color: darkslategrey;
 	}
 
+	#event-creation, #user-creation, #events-display {
+		padding-top: 20px;
+	}
+
 	.form-section {
 		label {
 			display: block;
@@ -203,15 +207,20 @@ ul {
 			position: relative;
 
 			.hamburger {
-		    	background: none;
-			    top: 0;
-			    line-height: 15px;
-			    border: 0;
-			    font-size: 1.4em;
-			    font-weight: bold;
-			    cursor: pointer;
-			    outline: none;
-			    z-index: 10000000000000;
+			  position: relative;
+			  padding-left: 1.25em;
+			  font-size: 40px;
+			}
+
+			.hamburger:before {
+			  content: "";
+			  position: absolute;
+			  top: -3px;
+			  left: 0;
+			  width: 1em;
+			  height: 0.125em;
+			  border-top: 0.375em double #000;
+			  border-bottom: 0.125em solid #000;
 			}
 
 			.nav-menu {
@@ -224,6 +233,7 @@ ul {
 			    min-height: 130px;
 			    box-sizing: border-box;
 			    z-index: 1;
+			    top: 24px;
 
 			    li {
 			    	padding: 10px;
