--- a/sass/responsive.scss
+++ b/sass/responsive.scss
@@ -25,6 +25,10 @@
 			font-size: getFontSize('small');
 		}
 
+		#event-creation, #user-creation, #events-display {
+			padding-top: 0px;
+		}
+
 		.header {
 
 			.container {
@@ -39,6 +43,7 @@
 				    position: relative;
 				    margin-top: 15px;
 				    min-height: auto;
+				    top: initial;
 
 				    li {
 				    	width: 33%;
